applications/scope/oauth2-service-bridge.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-service-bridge
  namespace: weave
spec:
  type: ExternalName
  externalName: oauth2-proxy.oauth2-proxy.svc.cluster.local
