applications/scope/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-clusterissuer
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    acme.cert-manager.io/http01-edit-in-place: "true"
  name: scope
  namespace: weave
spec:
  rules:
    - host: scope.tbr.gg
      http:
        paths:
          - backend:
              service:
                name: weave-scope-app
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - scope.tbr.gg
      secretName: scope-tls
